# Point-Cloud---UPRM

./: CMakeLists.txt  README.md  line_tracing.cpp
ply/: airplane.ply  wall_with_hole.ply
